--- a/pair.html
+++ b/pair.html
@@ -145,12 +145,12 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text">Link Robin with phone number</h3>
+            <h3 class="centered-text">Link kaviya king with phone number</h3>
             <br>
-            <h6>🔢 Enter your number with country code. ROBIN WEB PAIR</h6>
+            <h6👑>🔢 Enter your number with country code. kaviya king WEB PAIR</h6>
             <div class="input-container">
-              <input placeholder="+94704xxxxxx" type="number" id="number" placeholder="❗ Enter your phone number with country code, ROBIN WEB PAIR" name="">
-              <button id="submit">Submit ROBIN</button>
+              <input placeholder="+94704xxxxxx" type="number" id="number" placeholder="❗ +94 මුලට ගසා ඔබගේ දුරකතන අංකය ඇතුලත් කරන්න, KAVIYA WEB PAIR" name="">
+              <button id="submit">Submit KAVIYA KING</button>
             </div>
             <!-- Add the loading spinner -->
             <div id="loading-spinner">
@@ -178,7 +178,7 @@
       let text = document.getElementById("copy").innerText;
       let obj = document.getElementById("copy");
       await navigator.clipboard.writeText(obj.innerText.replace('CODE: ', ''));
-      obj.innerText = "✔️ COPIED";
+      obj.innerText = "✔️ COPIED😮‍💨";
       obj.style = "color:blue;font-weight:bold";
       obj.size = "5";
       setTimeout(() => {
@@ -191,9 +191,9 @@
     b.addEventListener("click", async (e) => {
       e.preventDefault();
       if (!c.value) {
-        a.innerHTML = '<a style="color:black;font-weight:bold">❗Enter your whatsapp number with country code.</a><br><br>';
+        a.innerHTML = '<a style="color:black;font-weight:bold">❗+94 ගහන්නැතුව නම්බරේ දුන්නට වැඩකරන්නෑ මැට්ටෝ 🥵 .</a><br><br>';
       } else if (c.value.replace(/[^0-9]/g, "").length < 11) {
-        a.innerHTML = '<a style="color:black;font-weight:bold">❗Invalid number format. Please try again.</a><br><br>';
+        a.innerHTML = '<a style="color:black;font-weight:bold">❗ඔබගේ දුරකතන අංකය වැරදී 🥲.</a><br><br>';
       } else {
         const bc = c.value.replace(/[^0-9]/g, "");
         let bb = "";
