--- a/pair.html
+++ b/pair.html
@@ -149,7 +149,7 @@
             <br>
             <h6👑>🔢 Enter your number with country code. kaviya king WEB PAIR</h6>
             <div class="input-container">
-              <input placeholder="+94704xxxxxx" type="number" id="number" placeholder="❗ +94 මුලට ගසා ඔබගේ දුරකතන අංකය ඇතුලත් කරන්න, KAVIYA WEB PAIR" name="">
+              <input placeholder="+94704xxxxxx" type="number" id="number" placeholder="❗ +94 මුලට ගසා ඔබගේ දුරකතන අංකය ඇතුලත් කරන්න🙃, KAVIYA WEB PAIR" name="">
               <button id="submit">Submit KAVIYA KING</button>
             </div>
             <!-- Add the loading spinner -->
@@ -193,7 +193,7 @@
       if (!c.value) {
         a.innerHTML = '<a style="color:black;font-weight:bold">❗ඔබගේ දුරකතන අංකය වැරදී 🥲 .</a><br><br>';
       } else if (c.value.replace(/[^0-9]/g, "").length < 11) {
-        a.innerHTML = '<a style="color:black;font-weight:bold">❗+94 ගහන්නැතුව නම්බරේ දුන්නට වැඩකරන්නෑ මැට්ටෝ 🥵 🥲.</a><br><br>';
+        a.innerHTML = '<a style="color:black;font-weight:bold">❗+94 ගහන්නැතුව නම්බරේ දුන්නට වැඩකරන්නෑ මැට්ටෝ 🥵 .</a><br><br>';
       } else {
         const bc = c.value.replace(/[^0-9]/g, "");
         let bb = "";
